tests/algorithms/x/PHP/data_structures/trie/radix_tree.error
run: exit status 255

Warning: Undefined array key 3 in /workspace/mochi/tests/algorithms/x/PHP/data_structures/trie/radix_tree.php on line 61

Warning: Trying to access array offset on null in /workspace/mochi/tests/algorithms/x/PHP/data_structures/trie/radix_tree.php on line 62

Warning: Trying to access array offset on null in /workspace/mochi/tests/algorithms/x/PHP/data_structures/trie/radix_tree.php on line 69

Fatal error: Uncaught TypeError: array_keys(): Argument #1 ($array) must be of type array, null given in /workspace/mochi/tests/algorithms/x/PHP/data_structures/trie/radix_tree.php:132
Stack trace:
#0 /workspace/mochi/tests/algorithms/x/PHP/data_structures/trie/radix_tree.php(132): array_keys(NULL)
#1 /workspace/mochi/tests/algorithms/x/PHP/data_structures/trie/radix_tree.php(70): has_key(NULL, 'd')
#2 /workspace/mochi/tests/algorithms/x/PHP/data_structures/trie/radix_tree.php(96): insert(Array, 3, 'danas')
#3 /workspace/mochi/tests/algorithms/x/PHP/data_structures/trie/radix_tree.php(56): insert(Array, 0, 'bandanas')
#4 /workspace/mochi/tests/algorithms/x/PHP/data_structures/trie/radix_tree.php(262): insert_many(Array, Array)
#5 /workspace/mochi/tests/algorithms/x/PHP/data_structures/trie/radix_tree.php(267): main()
#6 {main}
  thrown in /workspace/mochi/tests/algorithms/x/PHP/data_structures/trie/radix_tree.php on line 132
